# routing-system

./: README.md  api.md
boxes/: README.md  gateway.cfg  setup.py
boxes/common/: logging.cpp  logging.hpp  mesh_net.cpp  mesh_net.hpp  serdes.hpp  timer.hpp
boxes/extlib/mcommon/: library.json
boxes/extlib/mconfig/: library.json  mconfig
boxes/extlib/mdebug/: mdebug
boxes/extlib/mespnow/: library.json  mespnow
boxes/extlib/miniz/: library.json
boxes/extlib/mlink/: mlink
boxes/extlib/mupgrade/: library.json  mupgrade
boxes/extlib/mwifi/: library.json  mwifi
boxes/fw_box/: CMakeLists.txt  platformio.ini  run.sh  sdkconfig.esp32-2432S028Rv3
boxes/fw_box/include/: lv_conf.h
boxes/fw_box/lib/: mcommon  mconfig  mespnow  mwifi
boxes/fw_box/src/: audio.cpp  audio.hpp  cards.hpp  game.hpp  logging.cpp  logging.hpp  main.cpp  mesh_net.cpp  serdes.hpp  service_interface.hpp  sys.cpp  sys.hpp  timer.hpp
boxes/fw_root/: platformio.ini
boxes/fw_root/lib/: mdebug  miniz  mlink  (+1 more)
boxes/game_logic/: .gitignore  CMakeLists.txt
boxes/game_logic/data/: round_schema.json  simple_game.json  simple_game_41.json  simple_game_48.json
boxes/game_logic/data/samples/: square.json
boxes/game_logic/data/test_jun_24/: round1.json  round2.json  round3.json  warmup.json
boxes/game_logic/src/full_io/: CMakeLists.txt  io_routing_game.cpp  io_routing_game.hpp
boxes/game_logic/src/game/: CMakeLists.txt  routing_game.cpp  routing_game.hpp
boxes/game_logic/tests/: CMakeLists.txt  mock_card_interface.hpp  tests_rg_chat_packet.cpp  tests_rg_game_setup.cpp  tests_rg_hopper_packet.cpp  tests_rg_network.cpp  tests_rg_priority_packet.cpp  tests_rg_standard_packet.cpp  tests_rg_tcp_packet.cpp  tests_rg_visitall_packet.cpp  topology_samples.cpp  topology_samples.hpp
boxes/gateway/: app.py  gateway.py  util.py
server/: .gitignore  README.md  cli.php  composer.json  db-debug-data.sql  db-sample-data.sql  db-schema.sql  dbschema.sql  phpunit.xml  uispec.md
server/app/: cli-http-client.php  container.php  dependencies.php  middleware.php  routes.php  settings.php
server/cli/: award-points.php  get-score.php  get-status.php  list-games.php  pause-game.php  resume-game.php  setup-game.php  start-game.php  test-log-router-events.php
server/public/: index.php
server/tests/: TestCase.php
(+66 files in other folders)
